# battalion

./: .gitignore  Dockerfile  README.rst  docker-compose.yml  example.py  example2.py  example3.py  example_state.py  requirements.txt  setup.cfg  setup.py  tox.ini
battalion/: __init__.py  api.py  autodoc.py  base.py  cli.py  command.py  exceptions.py  fixture.py  handler.py  invocation.py  log.py  metaclasses.py  parse.py  registry.py  state.py  utils.py
battalion/archive/: cmd.py  command.py  exceptions.py  handler.py  registry.py
battalion_docs/: Makefile
battalion_docs/source/: battalion.rst  conf.py
battalion_tests/: test_cli.py
docs/: make.bat
docs/source/: index.rst  modules.rst
src/: MANIFEST.in  example.py  requirements.txt  test-requirements.txt
src/battalion/: api.py  autodoc.py  base.py  command.py  handler.py  log.py  registry.py  state.py  utils.py
tests/: tests.py
