[metadata]
name = battalion
author = Kyle Rockman
author_email = ['kyle.rockman@mac.com']
summary = Python framework for commandline applications
description-file = README.rst
license-file = LICENSE
classifiers = 
	Environment :: Console
	Intended Audience :: Developers
	Intended Audience :: Information Technology
	License :: OSI Approved :: Apache Software License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 2 :: Only

[files]
packages = 
    battalion

[pbr]
warnerrors = True

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0

